# TelegramPaid

./: .dockerignore  .env.exemple  .gitignore  DOCKER_DEBUG.md  Dockerfile  cronjob  entrypoint.sh  main.py  pyproject.toml  requirements.txt  test_telegram_session.py
.forgejo/.scripts/: x_test_cycle.py
.forgejo/workflows/: ci_cd.yaml
app/: cronjob  main.py
app/src/: X_poster.py  baixar_videos.py  cache_maneger.py  drive_maneger.py  editor_de_videos.py  subir_video.py  utils.py
app/tests/: debug_cron.py
app/utils/: logger.py
src/: X_poster.py  baixar_videos.py  cache_maneger.py  drive_maneger.py  editor_de_videos.py  subir_video.py  utils.py
